--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,7 @@
 			<scope>test</scope>
 		</dependency>
 
+<!-- added dependencies -->
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-spring</artifactId>
@@ -263,6 +264,16 @@
 			<artifactId>camel-test-spring</artifactId>
 			<version>2.15.3</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-sql</artifactId>
+			<version>2.15.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.10.2.0</version>
 		</dependency>
     </dependencies>
 
